# IntelligentRoboticsLabs

./: .gitignore
install/: local_setup.sh  setup.sh
install/kryson/lib/kryson/: talker
install/kryson/share/kryson/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kryson/share/kryson/cmake/: krysonConfig.cmake
log/: latest_build
src/Lab_1/: CMakeLists.txt  package.xml
src/Lab_1/src/: MinimalPublisher.cpp  subscriber_lambda_function.cpp
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/msg/: Sphere.msg
src/ex1/: CMakeLists.txt  package.xml
src/ex1/include/ex1/: room_constants.hpp
src/ex1/msg/: RobotInfo.msg
src/ex1/src/charging_station/: ChargingStation.cpp
src/ex1/src/robot/: Robot.cpp
src/kryson/: CMakeLists.txt
src/kryson/src/: subscriber_lambda_function.cpp
